Fix file selection not working on Financial Dashboard
Root cause: The file change event handler was only attached via JavaScript
event listeners, which might not be ready when the user selects a file.

Fixes:
1. Added inline onchange handler to file input in HTML
2. Exposed handleFileSelect globally as window.handleFileSelectGlobal
3. Made displayFileList() robust by falling back to direct DOM queries
   if the cached dom object isn't populated yet
4. Made handleFileSelect() also fallback for fileInput reset

This ensures file selection works regardless of JavaScript loading timing.

--- a/dashboard.html
+++ b/dashboard.html
@@ -379,7 +379,7 @@
                     <p>Upload your Excel or CSV file to analyze your finances</p>
                     
                     <div class="upload-area" id="uploadArea" onclick="if(event.target.id!=='browseFilesBtn')document.getElementById('fileInput').click()">
-                        <input type="file" id="fileInput" accept=".xlsx,.xls,.csv" multiple hidden aria-label="Select Excel files to analyze">
+                        <input type="file" id="fileInput" accept=".xlsx,.xls,.csv" multiple hidden aria-label="Select Excel files to analyze" onchange="if(window.handleFileSelectGlobal)window.handleFileSelectGlobal(event)">
                         <div class="upload-content">
                             <div class="upload-icon-large">📁</div>
                             <p class="upload-text">Drag and drop files here or click to browse</p>
